# chatterbox-openai-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  start.bat  start.sh  voice-registry.example.json
app/: __init__.py  config.py  main.py  models.py
app/routers/: metadata.py  speech.py
app/services/: tts.py  voice_registry.py
voices/: README.md
